fix: resolve nav links, paper list, home title, and toggle overlap

--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -206,6 +206,7 @@
     display: flex;
     align-items: center;
     width: 100%;
+    padding-right: 3rem;
 
     li {
       display: flex;
